# Grok-CAD

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  run_cad.cmd  run_cad.ps1  run_cad.sh
.github/: PULL_REQUEST_TEMPLATE.md
_archive_cpp/: CMakeLists.txt  README.md  run_cad.sh
_archive_cpp/app/: CMakeLists.txt
_archive_cpp/app/shaders/: line.frag  line.vert  mesh.frag  mesh.vert
_archive_cpp/app/src/: camera.cpp  camera.hpp  feature_tree_model.cpp  feature_tree_model.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  property_panel.cpp  property_panel.hpp  viewport.cpp  viewport.hpp
_archive_cpp/core/: CMakeLists.txt
_archive_cpp/core/include/cadcore/document/: document.hpp  feature.hpp  json_io.hpp
_archive_cpp/core/include/cadcore/math/: constants.hpp  mat4.hpp  quat.hpp  vec3.hpp
_archive_cpp/core/include/cadcore/mesh/: csg.hpp  mesh.hpp  primitives.hpp  stl.hpp  transform.hpp
_archive_cpp/core/src/document/: document.cpp  json_io.cpp
_archive_cpp/core/src/math/: mat4.cpp  quat.cpp
_archive_cpp/core/src/mesh/: csg.cpp  mesh.cpp  primitives.cpp  stl.cpp  transform.cpp
_archive_cpp/tests/: CMakeLists.txt  test_csg.cpp  test_document.cpp  test_main.cpp  test_math.cpp  test_mesh.cpp  test_primitives.cpp  test_stl.cpp
app/: __init__.py  display_coords.py  main.py  mainwindow.py  property_panel.py  sketch_mode.py  theme.py  theme.qss  view_cube.py  view_cube_widget.py  viewport.py  workers.py
bench/: arc_first_class_verify.py  box_select_framebuffer_verify.py  command_manager_ui_verify.py  desktop_shortcut_verify.py  dof_color_verify.py  draw_lag_bench.py  draw_lod_profile.py  draw_render_profile.py  drift_watch.py  driving_dims_verify.py  edge_dim_and_display_verify.py  edge_fillet_verify.py  edit_soak.py  env_axis_verify.py  extrude_bench.py  extrude_regression.py  features_pack_verify.py  fillet_results.csv  fillet_sweep.py  frametime_bench.py  frametime_results.csv  gpu_frametime.py  hard_mode_perf.py  hover_and_cmd_mgr_verify.py  native_win_verify.py  perf_ablation.py  perf_bench.py  preview_framebuffer_verify.py  profile_pick_framebuffer_verify.py  property_panel_verify.py  results.csv  results_fresh.csv  revolve_bench.py  revolve_results.csv  section_view_verify.py  sketch_features_verify.py  soak_watch.py  stroke_2560_verify.py  trim_extend_verify.py  ui_open_and_views_verify.py  (+3 more)
cadcore/: __init__.py  constraints.py  document.py  dof.py  edge_chamfer.py  edge_fillet.py  faces.py  fillet2d.py  mesh.py  profiles.py  project_io.py  scale.py  sketch.py  (+2 more)
(+58 files in other folders)
